Platforms: Introduce PlatformKWinWayland2

The new interface is more extensible and it fixes the latency issue on
wayland. The old org.kde.kwin.Screenshot interface is deprecated.

BUG: 437652
FIXED-IN: 21.04.2
(cherry picked from commit be8ee0f7efd17f5f29cbf70ac1374ad05f0481ff)